fix: Fixes docs
